--- a/.github/workflows/predict_defects.yml
+++ b/.github/workflows/predict_defects.yml
@@ -28,7 +28,7 @@ jobs:
         uses: MahiBegoug/tf-ml-modeling@main
         with:
           csv_path: metrics.csv
-          model: randomforest_model
+          model: logisticreg_model
           s3_bucket: ${{ secrets.S3_BUCKET }}
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
