--- a/.github/workflows/predict_defects.yml
+++ b/.github/workflows/predict_defects.yml
@@ -3,8 +3,12 @@ name: Defect Prediction Pipeline
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - '**.tf'
   pull_request:
     branches: [ "main" ]
+    paths:
+      - '**.tf'
 
 permissions:
   contents: read
